--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -13,6 +13,7 @@
         android:text="Generate" />
 
     <Button
+        android:onClick="onClick"
         android:id="@+id/btnUrl"
         android:layout_width="176dp"
         android:layout_height="63dp"
