--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -3,27 +3,26 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btnGen"
-        android:layout_width="176dp"
-        android:layout_height="63dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="570dp"
-        android:text="Generate" />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_marginTop="20dp"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="20dp"
+        android:fontFamily="@font/headings"
+        android:textSize="30dp"
+        android:text="Loco"
+        android:textAlignment="center"/>
 
-    <Button
-        android:onClick="onClick"
-        android:id="@+id/btnUrl"
-        android:layout_width="176dp"
-        android:layout_height="63dp"
-        android:layout_marginStart="219dp"
-        android:layout_marginLeft="219dp"
-        android:layout_marginTop="570dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="30dp"
-        android:text="URL List" />
+    <ImageButton
+        android:id="@+id/btnShowDB"
+        android:layout_height="50dp"
+        android:layout_width="50dp"
+        android:src="@drawable/next"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:onClick="showDatabase"/>
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -31,17 +30,17 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         tools:context=".MapsActivity"
-        android:layout_marginTop="60dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
-        android:layout_height="450dp" />
+        android:layout_height="match_parent" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="70dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:background="@drawable/white_border"
@@ -96,12 +95,4 @@
         android:src="@drawable/gps"
         android:id="@+id/gps"
         />
-
-    <EditText
-        android:id="@+id/ttl"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="515dp"
-        android:layout_marginRight="10dp" />
 </RelativeLayout>
